Fix overflow site

--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -91,7 +91,7 @@ body {
 /* Hauteur mini main*/
 
 .site {
-	overflow-y: hidden;
+	overflow-x: hidden;
 	position: relative;
 }
 .site-main {
